@@ -89,12 +89,13 @@ public:
 	wxArrayString GetStyles();							// Gets a list of all styles available
 	AssStyle *GetStyle(wxString name);					// Gets style by its name
 
-	wxString GetString();
-	void Load(wxString file,wxString charset=_T(""));	// Load from a file
+	wxString GetString();								// Returns the whole file as a single string
+	void Load(wxString file,wxString charset=_T(""),bool addToRecent=true);	// Load from a file
 	void Save(wxString file,bool setfilename=false,bool addToRecent=true,const wxString encoding=_T(""));	// Save to a file. Pass true to second argument if this isn't a copy
 	void Export(wxString file);							// Saves exported copy, with effects applied
 	void AddToRecent(wxString file);					// Adds file name to list of recently opened files
-	bool CanSave();										// Return true if the file can be saved in its current format
+	bool CanSave();										// Returns true if the file can be saved in its current format
+	static wxString GetWildcardList(int mode);			// Returns the list of wildcards supported (0 = open, 1 = save, 2 = export)
 
 	void GetResolution(int &w,int &h);								// Get resolution
 	int GetScriptInfoAsInt(const wxString key);						// Returns the value in a [Script Info] key as int.
